# kiratech_inventory

./: .dockerignore  .env  Dockerfile  README.md  conftest.py  db.sqlite3  manage.py  populate_inventory.py  pyproject.toml  pytest.ini
.github/workflows/: django-demo.yml
api/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
inventory/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_inventory_created_datetime.py  0003_alter_inventory_options_alter_inventory_stock.py
inventory/templates/inventory/: inventory_detail.html  inventory_list.html
inventory/tests/: test_inventory_views.py
kiratech_inventory/: asgi.py  settings.py  urls.py  wsgi.py
