[project]
name = "kiratech-inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
]
